# omnirecon

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  audit_report V6.md  expansions.md  omnirecon.py  pyproject.toml  update_oui.py
examples/: alerts.json  asset_tags.json  extintel.json  rules.yaml
legacy/: README.md  commands.txt  omnirecon.py  omnirecon_lite.py
lite/: __init__.py  __main__.py  scanner.py  tui.py  utils.py
omnirecon/: __init__.py  cli.py
omnirecon/engine/: __init__.py  anomaly.py  bluetooth.py  discovery.py  engine.py  enrichment.py  extintel.py  hygiene.py  intel.py  l2disc.py  lifecycle.py  linkqual.py  netinfo.py  oui.py  passive.py  pathmap.py  plugins.py  ports.py  primitives.py  report.py  routeraudit.py  snmp.py  ssdp.py  tags.py  tls.py  topology.py  trends.py  wanexp.py  wireless.py  zeroconf_disc.py
omnirecon/monitor/: __init__.py  alerts.py  cli.py  rules.py  scan.py  schedule.py  score.py  store.py
omnirecon/onetime/: __init__.py  cli.py  scan.py
omnirecon/onetime/pentest/: __init__.py  http_checks.py  runner.py  services.py  tls_audit.py
plugins/: example_attack_surface.py  example_http_banner.py
tests/: conftest.py  test_alerts.py  test_extintel.py  test_hygiene.py  test_plugins.py  test_recon_expansion.py  test_report.py  test_rules.py  test_schedule.py
web/: __init__.py  app.py  jobs.py
web/static/: app.js  style.css
web/templates/: assets.html  base.html  certs.html  dashboard.html  findings.html  history.html  reports.html  scan.html
